[package]
name = "form_portal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scylla = "0.8.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
thiserror = "1.0.40"
env_logger = "0.10.0"
log = "0.4.17"
askama = "0.12.0"
askama_actix = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.28"
handlebars = "4.3.6"
regex = "1.8.1"
chrono = { version = "0.4.41", features = ["serde"] }
